Add color to details summary in Island.css

--- a/Island.css
+++ b/Island.css
@@ -27,7 +27,9 @@ td:hover {
     z-index: 1; 
     position: relative;
 }
-
+details summary {
+    color: #000000;
+}
 /* ---------------------------------------------------- */
 /* タイルの色定義                                       */
 /* ---------------------------------------------------- */
