--- a/Island.css
+++ b/Island.css
@@ -19,24 +19,23 @@
 .next-action {
     color: #012073 !important;
 }
-    .sea { background-color: #aaf; }
-    .plain { background-color: #efe; }
-    .waste { background-color: #ddd; }
-    .forest { background-color: #4a9; }
-    .farm { background-color: #efe; }
-    .house { background-color: #efe; }
-    .factory { background-color: #efe; }
-    .gun { background-color: #4a9; }
-    .port { background-color: #aaf; }
-    .defenseFacility { background-color: #f9d; }
-    .enhancedFarm { background-color: #efe; }
-    .enhancedFactory { background-color: #efe; }
-    .Monument { background-color: #efe; }
-    .warship { background-color: #aaf; }
-    .warship-dispatched { background-color: #aaf; color: #fff;}
-    .warship-wreckage { background-color: #aaf; color: #fff; }
-    .oilRig { background-color: #aaf; }
-  .selected {
+.sea { background-color: #66b3ff; }
+.port { background-color: #1f78b4; }
+.oilRig { background: linear-gradient(#66b3ff, #004b8d); }
+.plain { background-color: #dfffcc; }
+.waste { background-color: #bbbbbb; }
+.forest { background-color: #228B22; }
+.mountain { background: linear-gradient(#705335, #4b3621); }
+.farm { background-color: #b5e07a; }
+.house { background-color: #fff3c4; }
+.factory { background-color: #ccccff; }
+.gun { background-color: #666666; }
+.defenseFacility { background-color: #ff77aa; }
+.Monument { background-color: #d4c17d; }
+.warship { background: linear-gradient(#66b3ff, #4682B4); }
+.warship-dispatched { background-color: #002f5f; color: #fff; }
+.warship-wreckage { background-color: #333; color: #ccc; }
+.selected {
     border: 2px solid gray !important;
   }
   .log-red {
